--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,7 +2,13 @@
 
 *
   font-family: 'Roboto', sans-serif
-
 .container
   max-width: 1140px
   margin: 0 auto
+  padding: 0 10px
+
+@import "blocks/header"
+@import "blocks/promo"
+@import "blocks/logo"
+@import "blocks/button"
+@import "media"
