--- a/src/css/normalize.css
+++ b/src/css/normalize.css
@@ -9,6 +9,8 @@
  */
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 html {
     line-height: 1.15; /* 1 */
@@ -39,9 +41,9 @@ main {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
 }
 
 /* Grouping content
