--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,8 +1,8 @@
 .promo
   background: url("../../img/bg/promo_bg.jpg") center (center/cover) no-repeat
   min-height: 680px
-  padding: 181px 0 82px 0
-  margin-top: -45px
+  padding: 142px 0 82px 0
+  position: relative
   &__promo__text
     max-width: 866px
   &__suptitle
@@ -35,6 +35,7 @@
     justify-content: space-between
     position: relative
     margin-top: 38px
+    z-index: 2
     &-line
       width: 48%
       height: 1px
