--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,4 +11,14 @@
 @import "blocks/promo"
 @import "blocks/logo"
 @import "blocks/button"
+@import "blocks/burger"
+@import "blocks/titles"
+@import "blocks/advantages"
+@import "blocks/work"
+@import "blocks/catalog"
+@import "blocks/consultation"
+@import "blocks/form"
+@import "blocks/circle"
+@import "blocks/employees"
+@import "blocks/schema"
 @import "media"
