Не работает fixed на мобильных устройствах

--- a/src/sass/blocks/_form.sass
+++ b/src/sass/blocks/_form.sass
@@ -3,7 +3,7 @@
   justify-content: center
   flex-wrap: wrap
   input
-    width: 270px
+    width: 268px
     padding: 17px 28px
     border: 1px solid #898989
     border-radius: 50px
@@ -12,4 +12,17 @@
     font-size: 14px
     font-weight: 300
     &:nth-child(2)
-      margin: 0 5px
+      margin: 0 4px
+  textarea
+    width: 813px
+    min-height: 71px
+    border: 1px solid #898989
+    background-color: #ffffff
+    border-radius: 5px
+    resize: none
+    color: #4b4b4b
+    font-size: 14px
+    font-weight: 300
+    padding: 18px 27px 18px 25px
+    margin-top: 8px
+    margin-bottom: 17px
