--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -56,5 +56,23 @@
   &__burger
     display: none
 
+  &-fixed
+    display: flex
+    align-items: center
+
+    top: 0
+    background-color: #25333c
+    height: 86px
+
+    .logo
+      width: 68px
+      height: 71px
+      margin-right: 50px
+
+    .header__nav
+      margin-right: 50px
+    .header__contacts
+      margin-right: 20px
+
 
 
