--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -21,4 +21,9 @@
 @import "blocks/circle"
 @import "blocks/employees"
 @import "blocks/schema"
+@import "blocks/reviews"
+@import "blocks/questions"
+@import "blocks/map"
+@import "blocks/footer"
+@import "blocks/pageup"
 @import "media"
