--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -11,6 +11,8 @@
   padding: 0
   font-size: 12px
   font-weight: 400
+  &:hover
+    background-color: darken($main-color, 10%)
   &_big
     width: 230px
     height: 57px
@@ -20,3 +22,5 @@
     order: 0
   &_mt25
     margin-top: 25px
+  &-request
+    width: 180px
