--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -34,6 +34,9 @@
       align-items: center
       margin-right: 10px
       transform: translateX(0)
+      transition: .5s all
+      &_active
+        transform: translateX(-109%)
     &__subtitle
       margin-top: 12px
       color: #2e2e2e
@@ -56,8 +59,10 @@
       width: 50%
       margin-left: 10px
       position: relative
-      //transform: translateX(-109%)
-    transform: translateX(0)
+      transform: translateX(0)
+      transition: .5s all
+      &_active
+        transform: translateX(-109%)
     &__list
       list-style-type: none
       padding-left: 10px
@@ -73,12 +78,12 @@
           top: 7px
           left: -10px
 
-  &__back
-    display: block
-    text-align: center
-    position: absolute
-    bottom: 0
-    left: 50%
-    transform: translateX(-50%)
-    color: $main-color
-    text-transform: uppercase
+.catalog-back
+  display: block
+  text-align: center
+  position: absolute
+  bottom: 0
+  left: 50%
+  transform: translateX(-50%)
+  color: #ffffff
+  text-transform: uppercase
