--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,5 +1,5 @@
 .header
-  position: fixed
+  position: absolute
   top: 23px
   left: 50%
   transform: translateX(-50%)
@@ -59,7 +59,7 @@
   &-fixed
     display: flex
     align-items: center
-
+    position: fixed
     top: 0
     background-color: #25333c
     height: 86px
