Закончил модальное окно

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,6 +7,10 @@
   margin: 0 auto
   padding: 0 10px
 
+.no-scroll
+  overflow: hidden
+
+
 @import "blocks/header"
 @import "blocks/promo"
 @import "blocks/logo"
@@ -26,4 +30,5 @@
 @import "blocks/map"
 @import "blocks/footer"
 @import "blocks/pageup"
+@import "blocks/modal"
 @import "media"
