--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -12,3 +12,12 @@
     bottom: -22px
   &__form
     margin: 8px 0 30px 0
+    div
+      &:nth-child(2)
+        input
+          margin: 0 4px
+      label
+        display: block
+        margin-top: 10px
+        text-align: center
+
