--- a/src/sass/blocks/_form.sass
+++ b/src/sass/blocks/_form.sass
@@ -2,6 +2,7 @@
   display: flex
   justify-content: center
   flex-wrap: wrap
+  align-items: flex-start
   input
     width: 268px
     padding: 17px 28px
@@ -26,3 +27,9 @@
     padding: 18px 27px 18px 25px
     margin-top: 8px
     margin-bottom: 17px
+  .error
+    border: 1px solid red
+  label.error
+    border: none
+    color: red
+    margin-bottom: 10px
