--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -114,6 +114,12 @@
       text-align: center
     &__text
       margin-top: 10px
+  .consultation
+    &__form
+      div
+      &:nth-child(2)
+        input
+          margin: 15px 0
   .form
     flex-direction: column
     align-items: center
@@ -201,3 +207,8 @@
         margin-top: 10px
       &__site
         margin-top: 10px
+  .modal
+    &__close
+      right: 20px
+      top: 10px
+
