Правки в форме Questions

--- a/src/sass/blocks/_form.sass
+++ b/src/sass/blocks/_form.sass
@@ -15,7 +15,7 @@
     &:nth-child(2)
       margin: 0 4px
   textarea
-    width: 813px
+    width: 100%
     min-height: 71px
     border: 1px solid #898989
     background-color: #ffffff
