--- a/src/sass/blocks/_questions.sass
+++ b/src/sass/blocks/_questions.sass
@@ -29,4 +29,15 @@
   &__form
     max-width: 813px
     margin: 0 auto
+    div
+      &:nth-child(2)
+        input
+          margin: 0 4px
+      label
+        display:  block
+        margin-top: 10px
+        text-align: center
+        font-size: 14px
 
+.form-message
+  width: 100%
